ADD_LIBRARY(testclient STATIC testclient.c testclient.h)
TARGET_LINK_LIBRARIES(testclient PUBLIC mqtt)

FUNCTION(ADD_INTEROP_TEST NAME)
    ADD_EXECUTABLE(${NAME} ${NAME}.c)
    TARGET_LINK_LIBRARIES(${NAME} PRIVATE testclient)
    ADD_TEST(NAME ${NAME} COMMAND ${NAME})
ENDFUNCTION()

ADD_INTEROP_TEST(basic_test)
