ADD_LIBRARY(testclient STATIC testclient.c testclient.h)
TARGET_LINK_LIBRARIES(testclient PUBLIC mqtt)

FUNCTION(ADD_INTEROP_TEST NAME)
    ADD_EXECUTABLE(${NAME} ${NAME}.c)
    TARGET_LINK_LIBRARIES(${NAME} PRIVATE testclient)
    ADD_TEST(NAME ${NAME} COMMAND ${NAME})
ENDFUNCTION()

ADD_INTEROP_TEST(basic_test)
ADD_INTEROP_TEST(retained_message_test)
ADD_INTEROP_TEST(will_message_test)
ADD_INTEROP_TEST(zero_length_clientid_test)
ADD_INTEROP_TEST(offline_message_queueing_test)
ADD_INTEROP_TEST(overlapping_subscriptions_test)
ADD_INTEROP_TEST(keepalive_test)
ADD_INTEROP_TEST(redelivery_on_reconnect_test)
